[gd_scene load_steps=21 format=3 uid="uid://77gdaxwl32l4"]

[ext_resource type="Script" path="res://Objects/carpet.gd" id="1_q7688"]
[ext_resource type="Texture2D" uid="uid://d076b838wvtrk" path="res://Art/Original Assets/carpet.png" id="2_byfgc"]
[ext_resource type="PackedScene" uid="uid://3vhqubj01y6i" path="res://Objects/carpet_area.tscn" id="2_n6w0b"]
[ext_resource type="PackedScene" uid="uid://cnmjcmacwy81p" path="res://Objects/shadow_manager.tscn" id="4_prgd1"]
[ext_resource type="PackedScene" uid="uid://d4cgodc4kpknp" path="res://Objects/shadow_detector.tscn" id="5_pgexl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mqevb"]
size = Vector2(28, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0r7r6"]
size = Vector2(48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oryfp"]
atlas = ExtResource("2_byfgc")
region = Rect2(96, 16, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2564w"]
atlas = ExtResource("2_byfgc")
region = Rect2(64, 16, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jm0r6"]
atlas = ExtResource("2_byfgc")
region = Rect2(32, 16, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e30cq"]
atlas = ExtResource("2_byfgc")
region = Rect2(0, 16, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ixbv"]
atlas = ExtResource("2_byfgc")
region = Rect2(0, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ob8cs"]
atlas = ExtResource("2_byfgc")
region = Rect2(32, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7t1d8"]
atlas = ExtResource("2_byfgc")
region = Rect2(64, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdd0d"]
atlas = ExtResource("2_byfgc")
region = Rect2(96, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ca5iu"]
atlas = ExtResource("2_byfgc")
region = Rect2(0, 16, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7wkiq"]
atlas = ExtResource("2_byfgc")
region = Rect2(32, 16, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_plu8t"]
atlas = ExtResource("2_byfgc")
region = Rect2(64, 16, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7vf5"]
atlas = ExtResource("2_byfgc")
region = Rect2(96, 16, 32, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_iqjax"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oryfp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2564w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jm0r6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e30cq")
}],
"loop": false,
"name": &"grow",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ixbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ob8cs")
}],
"loop": true,
"name": &"idle_big",
"speed": 0.5
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7t1d8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdd0d")
}],
"loop": true,
"name": &"idle_small",
"speed": 0.5
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ca5iu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7wkiq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_plu8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v7vf5")
}],
"loop": false,
"name": &"shrink",
"speed": 3.0
}]

[node name="carpet" type="StaticBody2D"]
z_index = -3
y_sort_enabled = true
collision_layer = 4
collision_mask = 7
script = ExtResource("1_q7688")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_mqevb")

[node name="carpet_area" parent="." instance=ExtResource("2_n6w0b")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="carpet_area"]
visible = false
position = Vector2(-16, 0)
shape = SubResource("RectangleShape2D_0r7r6")

[node name="shadow_detector" parent="." instance=ExtResource("5_pgexl")]

[node name="shadow_manager" parent="." instance=ExtResource("4_prgd1")]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_iqjax")
animation = &"shrink"
offset = Vector2(-8, 0)

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
